src/pages/ProcessRecord/style.less
	#main {
		width: 100%;
		.button-area{
			width: 100%;
			padding: 10rpx;
		}
		.button-area button{
			width: 40%;
		}
		#modal{
			position: absolute;
			top:0;
			z-index: 10;
			width: 100%;
			height: 100%;
			background-color: #cacaca;
			opacity: 95%;
			display: flex;
			flex-direction: row;
			justify-content: center;
			#mask{
				margin-top: 30%;
				display: flex;
				flex-direction: column;
				justify-content: center;
				align-items: center;
				border-radius: 10rpx;
				border: solid 2rpx black;
				width: 90%;
				height: 30%;
				text{
					margin: 10rpx;
				}
				input{
					width: 50%;
					height: 15%;
					background-color: white;
					border-radius: 10rpx;
					text-align: center;
					
				}
				view{
					width: 80%;
					display: flex;
					justify-content: space-between;
				}
				button{
					width: 40%;
					margin: 30rpx 10rpx 10rpx 10rpx;
				}
			}
		
		}
	}

	.flex {
		display: flex;
	}

	.row {
		flex-direction: row;
	}

	.space {
		justify-content: space-between;
	}

	.column {
		flex-direction: column;
	}

	.head {
		background-color: #F8F8F9;
	}

	.cell {
		display: flex;
		flex-direction: column;
		justify-content: center;
		border: solid 1rpx #DCDEE2;
		min-height: 50rpx;
	}

	.table {
		text-align: center;
	}

	//站号格
	.station {
		width: 16%;
	}

	// 姓名格
	.name {
		width: 16%;
	}

	// 时间格
	.time {
		width: 32%;
	}

	// 类型格
	.type {
		width: 10%;
	}

	// 工序
	.seq {
		width: 15%;
	}

	// 数量
	.count {
		width: 11%;
	}

	.light {
		background: #CCCCCC;
		display: flex;
		flex-direction: row;
	}

	.red {
		color: red;
	}
	.top{
		font-size: 40rpx;
	}
	.currentSeq{
		// border: solid 1px red;
		flex-grow: 1;
	}
	.currentCustation{
		// border: solid 1px red;
		flex-grow: 2;
	}
	// 调试
	.debug{
		border:solid 1rpx red
	}
	.item{
		border: solid 1rpx #F8F8F9;
		background-color:#2DB7F5;
	}

